The basics of channel stewardship.

--- a/client/index.html
+++ b/client/index.html
@@ -259,8 +259,8 @@
 					<input class="button send absolute" type="button" value="Send" data-id="send">
 				</div>
 			</div>
-			<div id="message">
-				<span class="censor administratorOnly" data-id="censor">X</span> <span class="light">(<span data-id="date"></span>) <span data-id="name"></span>: </span><span data-id="text"></span>
+			<div id="message" class="hover">
+				<span class="light">(<span data-id="date"></span>) <span data-id="name"></span>: </span><span data-id="text"></span> <span class="censor moderatorOnly hoverOnly inline" data-id="censor">X</span>
 			</div>
 			<div id="notification" class="center">
 				<span data-id="message"></span><span class="light"> (<span data-id="date"></span>)</span>
