--- a/client/index.html
+++ b/client/index.html
@@ -99,33 +99,17 @@
 			<div id="subscribe" class="subscribe static absolute full scroll">
 				<div class="header">Subscribe</div>
 				<p>This website, <i>fsmash.org</i>, has an ongoing cost of time and money to run. In order to keep the quality of the site high, please consider contributing.</p>
-				<p><strong>Thank you!</strong> to everyone who helps out. <span class="signature nowrap">--Ben</span></p>
+				<p>I've put together a new subscription system. A $4 donation earns a 3 month subscription. You can donate any amount you wish ($4 minimum), with a proportional subscription length.</p>
 				<form name="paypalSubscribe" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-					<table>
-						<tr>
-							<td>
-								<select name="os0" class="padding">
-									<option value="Helpful">Helpful - US$1/mo.</option>
-									<option value="Very Helpful">Very Helpful - US$5/mo.</option>
-									<option value="Extremely Helpful">Extremely Helpful - US$10/mo.</option>
-									<option value="Discount Rate">Discount Rate - US$10/yr.</option>
-								</select>
-							</td>
-							<td>
-								<input type="image" src="https://www.paypal.com/en_US/i/btn/btn_subscribe_LG.gif" name="submit" alt="PayPal" class="padding">
-							</td>
-							<td>
-								(PayPal)
-							</td>
-						</tr>
-					</table>
 					<input type="hidden" name="cmd" value="_s-xclick">
-					<input type="hidden" name="hosted_button_id" value="WGX3H97WB3SQE">
-					<input type="hidden" name="on0" value="">
+					<input type="hidden" name="hosted_button_id" value="KFKZNUEBV6PJ8">
 					<input type="hidden" name="currency_code" value="USD">
 					<input type="hidden" name="custom" value="" data-id="custom">
-					<img alt="" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+					<input type="image" src="https://www.paypal.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal">
+					<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
 				</form>
+				<p><strong>Thank you!</strong> to everyone who helps out. <span class="signature nowrap">--Ben</span></p>
+				<p class="invisible" data-id="subscriberInfo">Your subscription will run out on <span data-id="expireTime">(not subscribed)</span>.</p>
 				<div class="header">Benefits</div>
 				<div>
 					<p>Subscribers are thanked with the “Subscriber” title and a small <span class="name subscriber">icon</span> that may appear in their chat messages.</p>
