Clarify donation info.

--- a/client/index.html
+++ b/client/index.html
@@ -99,7 +99,7 @@
 			<div id="subscribe" class="subscribe static absolute full scroll">
 				<div class="header">Subscribe</div>
 				<p>This website, <i>fsmash.org</i>, has an ongoing cost of time and money to run. In order to keep the quality of the site high, please consider contributing.</p>
-				<p>I've put together a new subscription system. A $4 donation earns a 3 month subscription. You can donate any amount you wish ($4 minimum), with a proportional subscription length.</p>
+				<p>I've put together a new subscription system. A $4 donation earns a 3 month subscription. You can donate any amount you wish <strong>($4 minimum)</strong>, with a proportional subscription length.</p>
 				<form name="paypalSubscribe" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
 					<input type="hidden" name="cmd" value="_s-xclick">
 					<input type="hidden" name="hosted_button_id" value="KFKZNUEBV6PJ8">
@@ -120,6 +120,7 @@
 				<div class="light">
 					<p>Subscribing does not grant any special rights or privileges. You must still follow all of the site rules. If you are banned, your subscription fee will not be refunded.</p>
 					<p>If you have donated at any time in the past, your donation will automatically be credited at a rate of $5.00USD/mo. If you donated, but for some reason you weren’t credited, please contact me.</p>
+					<p>The <strong>minimum donation</strong> is $4. Smaller amounts are appreciated, but will not earn subscriber status.</p>
 				</div>
 			</div>
 
