--- a/client/index.html
+++ b/client/index.html
@@ -88,6 +88,10 @@
 				<p>Trolling is allowed as long as it follows the other rules.</p>
 				<p><b>If you believe someone has broken the rules</b>, please press the Report… button in the channel where it happened. No action will be taken immediately, but the last 50 messages in the channel will be saved for review. Please don’t abuse this feature.</p>
 				<p>If you submit a video that isn’t related to Brawl (or one that’s really bad), it will probably get deleted. No machinima.</p>
+				<p>If you need a second user account for any reason (e.g. for a sibling), please contact me.</p>
+				<div class="header">Bans</div>
+				<p>All bans are permanent by default. However, if you believe you were unjustly banned, please contact me on SWF with a full explanation.</p>
+				<p>Proxies are not allowed. You may be banned for using one. If you have a legitimate reason for needing one, please contact me.</p>
 				<div class="header">Legal Information</div>
 				<p>Messages and account information are the property of the User.</p>
 				<p>All characters appearing on this site are fictitious. Any resemblance to real persons, living or dead, is purely coincidental.</p>
