Customizable user name colors for subscribers.

--- a/client/index.html
+++ b/client/index.html
@@ -101,6 +101,10 @@
 			</div>
 
 			<div id="subscribe" class="subscribe static absolute full scroll">
+				<div class="subscriber panel overflow invisible" data-id="subscriberPane">
+					<div>Name color in chat: <input data-id="color" type="text" class="text" value="" size="10" maxlength="7"> (hexadecimal, like #ff0000)</div>
+					<div>Your subscription will run out on <span data-id="expireTime">(not subscribed)</span>.</div>
+				</div>
 				<div class="header">Subscribe</div>
 				<p>This website, <i>fsmash.org</i>, has an ongoing cost of time and money to run. In order to keep the quality of the site high, please consider contributing.</p>
 				<p>I've put together a new subscription system. A $4 donation earns a 3 month subscription. You can donate any amount you wish <strong>($4 minimum)</strong>, with a proportional subscription length.</p>
@@ -113,7 +117,6 @@
 					<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
 				</form>
 				<p><strong>Thank you!</strong> to everyone who helps out. <span class="signature nowrap">--Ben</span></p>
-				<p class="invisible" data-id="subscriberInfo">Your subscription will run out on <span data-id="expireTime">(not subscribed)</span>.</p>
 				<div class="header">Benefits</div>
 				<div>
 					<p>Subscribers are thanked with the “Subscriber” title and a small <span class="name subscriber">icon</span> that may appear in their chat messages.</p>
