Put site name in about description, and remove it from the subscription information, so that hopefully Google search results for "fsmash" look a little bit better.

--- a/client/index.html
+++ b/client/index.html
@@ -68,7 +68,7 @@
 
 			<div id="about" class="about static absolute full scroll">
 				<div class="header">About</div>
-				<p>This website is a simple Wi-Fi friend finder for the game Super Smash Bros. Brawl. Please read the first link below for general information.</p>
+				<p>This website, <i>fsmash.org</i>, is a simple Wi-Fi friend finder for the game Super Smash Bros. Brawl. Please read the first link below for general information.</p>
 				<div class="header">Links</div>
 				<ol>
 					<li><a href="http://www.smashboards.com/showthread.php?t=208726" target="_blank">Smash World Forums thread + how-to</a></li>
@@ -106,7 +106,7 @@
 					<div>Your subscription will run out on <span data-id="expireTime">(not subscribed)</span>.</div>
 				</div>
 				<div class="header">Subscribe</div>
-				<p>This website, <i>fsmash.org</i>, has an ongoing cost of time and money to run. In order to keep the quality of the site high, please consider contributing.</p>
+				<p>This website has an ongoing cost of time and money to run. In order to keep the quality of the site high, please consider contributing.</p>
 				<p>I've put together a new subscription system. A $4 donation earns a 3 month subscription. You can donate any amount you wish <strong>($4 minimum)</strong>, with a proportional subscription length.</p>
 				<form name="paypalSubscribe" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
 					<input type="hidden" name="cmd" value="_s-xclick">
