Fix handling of offline and online name colors.

--- a/client/index.html
+++ b/client/index.html
@@ -252,7 +252,7 @@
 				</div>
 			</div>
 			<div id="message" class="message hover">
-				<span class="light">(<span data-id="date"></span>) <span class="name" data-id="name"></span>: </span><span class="messageText" data-id="text"></span> <span class="censor moderatorOnly hoverOnly inline" data-id="censor">X</span>
+				<span class="light">(<span data-id="date"></span>) <span class="name offline" data-id="name"></span>: </span><span class="messageText" data-id="text"></span> <span class="censor moderatorOnly hoverOnly inline" data-id="censor">X</span>
 			</div>
 			<div id="notification" class="center">
 				<span data-id="message"></span><span class="light"> (<span data-id="date"></span>)</span>
