--- a/client/index.html
+++ b/client/index.html
@@ -78,19 +78,21 @@
 				</ol>
 				<div class="header">Rules</div>
 				<ol>
-					<li>Don’t spam.</li>
+					<li>Be friendly and welcoming to new members.</li>
 					<li>Keep discussions on topic for the channel you are in.</li>
 					<li>Limit one account per person and per IP address (unless you get special permission).</li>
 					<li>Don’t try to cheat the rating system.</li>
 					<li>Don’t ask your opponents to rate you after you play. (Asking before you play is fine.)</li>
+					<li>Don’t spam.</li>
 				</ol>
 				<p>I’m trying to keep this list as minimal as possible. Don’t make me expand it.</p>
-				<p>Trolling is allowed as long as it follows the other rules.</p>
+				<p>Trolling is allowed as long as it follows the other rules. However, trolling new members is only allowed in limited moderation. Please don't tell them to leave or direct them to other sites.</p>
 				<p><b>If you believe someone has broken the rules</b>, please press the Report… button in the channel where it happened. No action will be taken immediately, but the last 50 messages in the channel will be saved for review. Please don’t abuse this feature.</p>
 				<p>If you submit a video that isn’t related to Brawl (or one that’s really bad), it will probably get deleted. No machinima.</p>
 				<p>If you need a second user account for a legitimate reason (e.g. for a sibling), please contact me.</p>
 				<div class="header">Bans</div>
 				<p>All bans are permanent by default. However, if you believe you were unjustly banned, please contact me on SWF with a full explanation.</p>
+				<p>If you repeatedly violate the rules in a specific channel, you may be kicked or permanently blocked from that channel.</p>
 				<p>Proxies are not allowed. You may be banned for using one. If you have a legitimate reason for needing one, please contact me.</p>
 				<div class="header">Legal Information</div>
 				<p>Messages and account information are the property of the User.</p>
