--- a/client/index.html
+++ b/client/index.html
@@ -117,7 +117,7 @@
 		<p><strong>Thank you!</strong> to everyone who helps out. <span class="signature nowrap">--Ben</span></p>
 		<div class="header">Benefits</div>
 		<div>
-			<p>Subscribers are thanked with the "Subscriber" title, and may choose a custom color for their name in chat messages, in addition to a small <span class="subscriber demo">icon</span> that is also added for them.</p>
+			<p>Subscribers are thanked with the "Subscriber" title and may choose a custom color for their name in chat messages.</p>
 			<p>Subscribers may ask to have their usernames changed. Name changes will be granted infrequently (about once per year per person) and on a case-by-case basis. Usernames will no longer be changed for non-subscribers.</p>
 			<p>In the future, subscribers will be able to host tournaments using online bracket software that is currently in development. (This feature is not yet complete and subject to change.)</p>
 		</div>
