--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>Smash fo&rsquo; Finder @ fsmash.org</title>
+<title>Smash Fo&rsquo; Finder @ fsmash.org</title>
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="format-detection" content="telephone=no">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
