Remove YouTube integration.
Thank you for your years of flawless service.

--- a/client/index.html
+++ b/client/index.html
@@ -52,12 +52,8 @@
 		</div>
 	</div>
 	<div id="video" class="video padding">
-		<a data-id="thumbnailAnchor"><img src="thumbnail.gif" alt="Thumbnail" width="120" class="floatLeft" data-id="thumbnail"></a>
 		<div class="padding">
-			<div class="title nowrap"><a target="_blank" data-id="anchor">Loading video…</a></div>
-			<div class="nowrap"><b>Duration:</b> <span data-id="duration">--:--</span></div>
-			<div class="nowrap"><b>Uploaded by:</b> <a target="_blank" data-id="uploaderName">Loading…</a></div>
-			<div class="nowrap"><b>Upload date:</b> <span data-id="uploadDate">Loading…</span></div>
+			<div class="title nowrap"><a target="_blank" data-id="anchor"></a></div>
 			<div class="nowrap"><b>Submitted by:</b> <span data-id="submitterName"></span></div>
 		</div>
 	</div>
