--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="styles/base/index.css" type="text/css">
 <link title="Dark" data-style-id="2" rel="alternate stylesheet" href="styles/dark/index.css" type="text/css">
 <link title="Greenscreen" data-style-id="3" rel="alternate stylesheet" href="styles/greenscreen/index.css" type="text/css">
+<link title="Splatoon" data-style-id="4" rel="alternate stylesheet" href="styles/splatoon/index.css" type="text/css">
 
 <div id="audio"></div>
 <div id="body" class="absolute full invisible notAdministrator">
